manifests/base/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: argocd-funge2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: argocd-funge2
  template:
    metadata:
      labels:
        app: argocd-funge2
        app.kubernetes.io/component: backstage
        backstage.io/kubernetes-id: binco97-dev
    spec:
      containers:
        - name: argocd-funge2
          image: quay.io/quay.io/argoproj/argocd:v2.9.5/argocd-funge2:latest
          ports:
            - name: http-6443
              containerPort: 6443
              protocol: TCP
          resources:
            limits:
              memory: '128Mi'
              cpu: '500m'
