manifests/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: argocd-funge2
  labels:
    app: argocd-funge2
    app.kubernetes.io/component: backstage
    backstage.io/kubernetes-id: binco97-dev
spec:
  ports:
    - name: http-6443
      port: 6443
      protocol: TCP
      targetPort: 6443
  selector:
    app: argocd-funge2
